# vigil-node

./: .gitignore  CMakeLists.txt  CMakeLists.txt.save  CMakeLists.txt.save.1  README.md
.github/workflows/: ci.yml
config/: settings.example.json
cpp/include/: bridge.h  colors.h  config.h  database.h  feature_extractor.h  graph.h  order.h  orderbook.h  trade.h
cpp/src/: bridge.cpp  config.cpp  database.cpp  feature_extractor.cpp  graph.cpp  main.cpp  orderbook.cpp
data/training_data/: simulate_data.py
data/training_data/processed/: features_train.csv
docs/: architecture.md  bridge_contract.md  schema.md
python/: requirements.txt
python/bridge/: scorer.py
python/dashboard/: dashboard.py  db_reader.py
python/models/: ensemble.py  evaluate.py  explain.py  train_rf.py  train_xgb.py
python/utils/: config.py  logger.py  validators.py
scripts/: reset_db.sh
tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/cpp/: TEST_ORDERBOOK.cpp  test_bridge.cpp  test_config.cpp  test_database.cpp  test_features.cpp  test_graph.cpp  test_orderbook.cpp
tests/python/: test_db_reader.py  test_model.py  test_scorer.py  test_validators.py
